i have modified html file at 5:24pm

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1>hello how are u my bro</h1>
+    <h1>hello how are u my friend</h1>
+    <h1>hello how are u my buddy</h1>
+
     <script src="index.js"></script>
   </body>
 </html>
